src/parser_tests/tests_input/unit/good/Good19.ty
singleton class Loop { 
    
    actions: {
        loop: (x: Int) -> Void = {
            while (not x > 10000) { 
                Pass
            }
        }
    }
}
