src/parser_tests/tests_input/unit/bad/Bad26.ty
singleton class SomePredicate { 
    
    functions: {
        predicate: (x: Int) -> Bool = {
            x > 3 x > 5
        }
    }
}
